# ur3-gripper-hande

./: dependencies.rosinstall
LADA_description/: CMakeLists.txt  package.xml
LADA_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
LADA_description/urdf/: LADA.gazebo  LADA.trans  LADA.xacro  materials.xacro
car_description/: CMakeLists.txt  package.xml
car_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
car_description/meshes/: base_link.stl
car_description/urdf/: car.gazebo  car.trans  car.xacro  materials.xacro
car_spawner/: CMakeLists.txt  package.xml
car_spawner/launch/: spawn_cars.launch
car_spawner/scripts/: spawn_cars.py
car_spawner/worlds/: empty.world
docker/: Dockerfile  docker-compose.yml  launch_container.sh  run_docker_container.ps1
logi_camera/: CMakeLists.txt  package.xml
logi_camera/launch/: gazebo.launch
logi_camera/urdf/: camera.gazebo  camera.xacro
logi_camera/worlds/: empty.world
ur3_description/launch/: display_with_gripper.launch  display_with_gripper_85.launch  display_with_gripper_hande.launch  display_with_gripper_hande_camera.launch
ur3_gazebo/: CMakeLists.txt  setup.py
ur3_gazebo/launch/: ur_gripper_85_cubes.launch  ur_gripper_hande_cars.launch  ur_gripper_hande_conveyor_cars.launch
ur3_gazebo/scripts/: conveyor_cars_placement.py  detect_car.py
ur3_gazebo/urdf/: ur_gripper_hande.xacro
ur3_gazebo/worlds/: cars_task.world  ur3_car_conveyor.world
ur_control/scripts/: joint_position_keyboard.py  sim_controller_examples.py
(+14 files in other folders)
