<?xml version="1.0"?>
<package format="2">
  <name>car_spawner</name>
  <version>1.0.0</version>
  <description>The car_spawner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <author email="ja.mendez@uniandes.edu.co">Juan Mendez</author>
  <maintainer email="ja.mendez@uniandes.edu.co">Juan Mendez</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>car_description</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>car_description</exec_depend>  
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>



  <export>
  </export>

</package>
